<resources>
    <string name="app_name">ShinyColors Wallpaper</string>
    <string name="title_activity_settings">ShinyColors Wallpaper Settings</string>

    <!-- Preferences -->
    <string name="preference_category_settings">Settings</string>
    <string name="preference_settings_sound">Sound</string>
    <string name="preference_category_controls">Controls</string>
    <string name="preference_controls_reload">Reload</string>
    <string name="preference_controls_back">Back</string>
    <string name="preference_category_preliminary">Preliminary</string>
    <string name="preference_preliminary_help">Help</string>
    <string name="preference_preliminary_troubleshoot">Troubleshoot</string>
    <string name="preference_preliminary_login">Login</string>
    <string name="preference_preliminary_change_live_wallpaper">Change live wallpaper</string>

    <string name="shinyolors_url" translatable="false">https://shinycolors.enza.fun/</string>
    <string name="shinyolors_home_url" translatable="false">https://shinycolors.enza.fun/home</string>
    <string name="desktop_ua" translatable="false">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.75 Safari/537.36</string>

    <string name="document_shortcut">Shortcut</string>
    <string name="help_how_to_setting_live_wallpaper">How to setting live wallpaper</string>
    <string name="help_sound_config">Sound configuration.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_1">Click \'Login\' button.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_2">Log-in Bandainamco id account in new window.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_3">Make game show idols in home scene after login.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_4">Touch back button at left-botton if nocide page shown like picture.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_5">Touch back button of mobile or left arrow button at left-top to go setting window if idols show at home scene.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_6">Touch \'Change live wallpaper\' button in setting window.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_7">Touch \'Set wallpaper\' button in new window.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_8">You can select where it show in home or both home and lock screen. Choose what you want.</string>
    <string name="help_how_to_setting_live_wallpaper_desc_9">After close setting window and go to launcher screen, Idols will show.</string>
    <string name="help_sound_config_desc_1">To hear bgm and communication with idols, turn on sound option at setting window.</string>
    <string name="troubleshoot_cannot_touch_part_of_screen">Can\'t touch part of screen</string>
    <string name="troubleshoot_cannot_touch_when_landscape_orientation">Cannot touch in landscape orientation</string>
    <string name="troubleshoot_cannot_touch_part_of_screen_desc_1">In order to prevent accidentally pressing the menu button of Shinycolors when using the wallpaper, some areas are blocked from being touched. If something strange appears on the screen and you want to turn it off, please refer to the following.</string>
    <string name="troubleshoot_strange_displayed_on_wallpaper_desc_1">If the idols are not displayed on the background screen as shown below, and notice window or event window of ShinyColors is displayed, use the reload or back function.</string>
    <string name="troubleshoot_strange_displayed_on_wallpaper_desc_2">This is a function to refresh wallpaper. Click \'Reload\' button on settings window.</string>
    <string name="troubleshoot_strange_displayed_on_wallpaper_desc_3">This is a function that presses the back button in the lower left part and the OK or Cancel button when a pop-up window appears. As described above, some of the screens are blocked from being touched, so various windows displayed on the screen can be removed with the back function. The refresh function takes time to reload, so it is usually convenient to use this function.</string>
    <string name="troubleshoot_strange_displayed_on_wallpaper_desc_4">Alternatively, you can use the back function by quickly double tapping with two fingers anywhere on the walloaoer screen as shown in the photo below.</string>
    <string name="troubleshoot_wallpaper_broken_when_change_orientation_desc_1">It is not your fault to come out like this. I am trying to fix the problem as I keep testing. Until then, try rotating the screen several times, or force quit the Settings app and set the wallpaper again.</string>
    <string name="troubleshoot_cannot_touch_when_landscape_orientation_desc_1">There is a bug that some manufacturers or launchers do not properly trigger a touch event in landscape mode. I\'m try to solve it.</string>
    <string name="troubleshoot_strange_displayed_on_wallpaper">Strange things show like menu of shinycolors</string>
    <string name="troubleshoot_wallpaper_broken_when_change_orientation">Wallpaper is broken when rotate orientation</string>
</resources>