<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/preference_category_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="Sound"
            android:title="@string/preference_settings_sound" />
<!--        <EditTextPreference-->
<!--            android:defaultValue="#FFFFFF"-->
<!--            android:key="PrimaryColor"-->
<!--            android:title="PrimaryColor"/>-->
<!--        <EditTextPreference-->
<!--            android:defaultValue="#FFFFFF"-->
<!--            android:key="SecondaryColor"-->
<!--            android:title="SecondaryColor"/>-->
<!--        <EditTextPreference-->
<!--            android:defaultValue="#FFFFFF"-->
<!--            android:key="TertiaryColor"-->
<!--            android:title="TertiaryColor"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_category_controls">
        <Preference
            android:key="Reload"
            android:title="@string/preference_controls_reload" />
        <Preference
            android:key="Back"
            android:title="@string/preference_controls_back" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_category_preliminary">
        <Preference
            android:key="help"
            android:title="@string/preference_preliminary_help">
<!--            <intent-->
<!--                android:targetClass="@string/HelpActivity"-->
<!--                android:targetPackage="@string/applicationId" />-->
        </Preference>
        <Preference
            android:key="troubleshoot"
            android:title="@string/preference_preliminary_troubleshoot">
            <!--            <intent-->
            <!--                android:targetClass="@string/HelpActivity"-->
            <!--                android:targetPackage="@string/applicationId" />-->
        </Preference>
        <Preference
            android:key="login"
            android:title="@string/preference_preliminary_login">
<!--            <intent-->
<!--                android:targetClass="@string/LoginWebActivity"-->
<!--                android:targetPackage="@string/applicationId" />-->
        </Preference>
        <Preference
            android:key="change_live_wallpaper"
            android:title="@string/preference_preliminary_change_live_wallpaper">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>